2024-11-17T01:51:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11874981477 # 482
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-17
* notice: last 14d: unq all: 3 1731
* notice: prev accum: outdated-unq outdated-all / unq all: 2296 232057 / 2313 233870
* notice: next accum: outdated-unq outdated-all / unq all: 2297 232185 / 2314 233991
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -75 / +1 +20 -0 -0 / 1 20
* notice: removed / changed dates: [2024-11-02] / [2024-11-03 2024-11-16 2024-11-17]

2024-11-16T01:45:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11866124116 # 481
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-16
* notice: last 14d: unq all: 3 1738
* notice: prev accum: outdated-unq outdated-all / unq all: 2295 231931 / 2311 233742
* notice: next accum: outdated-unq outdated-all / unq all: 2296 232057 / 2313 233870
* notice: prev exec diff / last date diff / accum: unq all: +2 +128 -0 -75 / +2 +27 -0 -0 / 2 27
* notice: removed / changed dates: [2024-11-01] / [2024-11-02 2024-11-15 2024-11-16]

2024-11-15T01:47:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11848755294 # 480
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-15
* notice: last 14d: unq all: 2 1736
* notice: prev accum: outdated-unq outdated-all / unq all: 2294 231803 / 2310 233619
* notice: next accum: outdated-unq outdated-all / unq all: 2295 231931 / 2311 233742
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -75 / +1 +25 -0 -0 / 1 25
* notice: removed / changed dates: [2024-10-31] / [2024-11-01 2024-11-14 2024-11-15]

2024-11-14T01:41:35Z: