@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-11-05T01:40:37Z",
-  "count" : 126,
+  "timestamp" : "2024-11-18T01:49:36Z",
+  "count" : 51,
   "count_minmax" : [ 26, 126 ],
-  "count_decinc" : [ -0, +126 ],
+  "count_decinc" : [ -75, +126 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
