@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-11-18T01:49:36Z",
-  "count" : 127,
-  "count_minmax" : [ 20, 127 ],
-  "count_decinc" : [ -0, +127 ],
+  "count" : 23,
+  "count_minmax" : [ 23, 23 ],
+  "count_decinc" : [ -0, +23 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
