@@ -1,15 +1,10 @@
 {
-  "count": 1731,
+  "count": 1735,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-11-03T00:00:00Z",
-      "count": 51,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-11-04T00:00:00Z",
-      "count": 126,
+      "count": 51,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2024-11-17T00:00:00Z",
-      "count": 20,
+      "count": 127,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-11-18T00:00:00Z",
+      "count": 23,
       "uniques": 1
     }
   ]
