@@ -1,3 +1,12 @@
+2024-11-18T01:49:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11884296554 # 483
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-18
+* notice: last 14d: unq all: 3 1735
+* notice: prev accum: outdated-unq outdated-all / unq all: 2297 232185 / 2314 233991
+* notice: next accum: outdated-unq outdated-all / unq all: 2298 232311 / 2315 234121
+* notice: prev exec diff / last date diff / accum: unq all: +1 +130 -0 -75 / +1 +23 -0 -0 / 1 23
+* notice: removed / changed dates: [2024-11-03] / [2024-11-04 2024-11-17 2024-11-18]
+
 2024-11-17T01:51:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11874981477 # 482
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-17
